// Code generated by gorm.io/gen. DO NOT EDIT.
// Code generated by gorm.io/gen. DO NOT EDIT.
// Code generated by gorm.io/gen. DO NOT EDIT.

package model

const TableNameJobStatus = "job_status"

// JobStatus mapped from table <job_status>
type JobStatus struct {
	ID        string `gorm:"column:id;type:uuid;primaryKey;default:gen_random_uuid()" json:"id"`
	Name      string `gorm:"column:name;type:text;not null" json:"name"`
	Descr     string `gorm:"column:descr;type:text;not null" json:"descr"`
	IsFinal   bool   `gorm:"column:is_final;type:boolean;not null" json:"is_final"`
	IsSuccess bool   `gorm:"column:is_success;type:boolean;not null" json:"is_success"`
	IsCond    bool   `gorm:"column:is_cond;type:boolean;not null" json:"is_cond"`
}

// TableName JobStatus's table name
func (*JobStatus) TableName() string {
	return TableNameJobStatus
}
