// Code generated by gorm.io/gen. DO NOT EDIT.
// Code generated by gorm.io/gen. DO NOT EDIT.
// Code generated by gorm.io/gen. DO NOT EDIT.

package model

const TableNameJobType = "job_type"

// JobType mapped from table <job_type>
type JobType struct {
	ID                    string  `gorm:"column:id;type:uuid;primaryKey;default:gen_random_uuid()" json:"id"`
	Name                  string  `gorm:"column:name;type:text;not null" json:"name"`
	Descr                 string  `gorm:"column:descr;type:text;not null" json:"descr"`
	ReferenceTable        *string `gorm:"column:reference_table;type:text" json:"reference_table"`
	ReferenceStatusTable  *string `gorm:"column:reference_status_table;type:text" json:"reference_status_table"`
	ReferenceStatusColumn string  `gorm:"column:reference_status_column;type:text;not null;default:status_id" json:"reference_status_column"`
	RoutingKey            *string `gorm:"column:routing_key;type:text" json:"routing_key"`
}

// TableName JobType's table name
func (*JobType) TableName() string {
	return TableNameJobType
}
